# dagr

./: .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deny.toml  lints.toml  rust-toolchain.toml  rustfmt.toml
.github/: CODEOWNERS  pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml
crates/artifact/: Cargo.toml
crates/artifact/src/: canonical.rs  event_stream.rs  fold.rs  lib.rs  schema.rs
crates/artifact/tests/: artifact_schemas.rs  compatibility_ci.rs  crash_safety_fault_injection.rs  crashed_run_finalize_path.rs  durable_reference_recording.rs  durable_reference_schema.rs  event_stream_writer.rs  node_metrics_fold.rs  run_artifact_fold.rs  run_artifact_fold_schema.rs  run_summary_critical_path.rs
crates/cli/: Cargo.toml  build.rs
crates/cli/examples/: fingerprint_fixture.rs
crates/cli/src/: contract.rs  dispatch.rs  driver.rs  full_pipeline.rs  graph.rs  lib.rs  logging.rs  main.rs  scale_bench.rs  signals.rs  structure_snapshot.rs  t56_sample.rs  temp.rs
crates/cli/tests/: admission_driver.rs  bounded_memory_chain.rs  cancellation_core_and_drain.rs  cli_acceptance.rs  cli_contract.rs  container_limits_driver.rs  coverage_matrix.rs  execution_class_dispatch.rs  exit_code_table.rs  failure_policy_and_propagation.rs  fingerprint_artifact.rs  full_pipeline_fakes_harness.rs  graph_artifact_emission.rs  graph_artifact_schema_roundtrip.rs  group_artifact.rs  logging_and_tracing.rs  m1_demo_three_node_chain.rs  m2_demo_clean_stop.rs  m2_demo_overcommit.rs  m3_demo_explain_a_run.rs  os_signals_flush_and_cleanup.rs  resume_acceptance.rs  resume_schema.rs  resume_verb.rs  run_artifact_fold_fingerprint_join.rs  run_loop_driver.rs  run_verb_exit_codes.rs  scale_benchmark.rs  structure_snapshot.rs  teardown_nodes.rs  termination_property_driver.rs  two_concurrent_runs.rs
crates/core/: Cargo.toml
crates/core/src/: admission.rs  assembly.rs  binding.rs  context.rs  error.rs  execution.rs  flow.rs  handle.rs  lib.rs  limits.rs  metrics.rs  readiness.rs  resume.rs  scratch.rs  slot.rs  stable_name.rs  task.rs  test_kit.rs
crates/core/tests/: admission_pools.rs  assembly.rs  attempt_timeout.rs  container_limits.rs  data_binding_positive.rs  determinism_and_purity.rs  durable_output_contract.rs  fingerprint.rs  flow_builder.rs  groups.rs  node_metrics.rs  node_policy.rs  ordering_edge_positive.rs  ordering_edges.rs  output_slot.rs  panic_containment.rs  permit_release_matrix.rs  readiness.rs  resource_registry.rs  resume_core.rs  retry_backoff.rs  run_context.rs  scratch_carry_forward.rs  scratch_store.rs  scratch_survives_restart.rs  single_attempt.rs  single_task_test_kit.rs  stable_names.rs  task_abstraction.rs  teardown.rs  termination_property.rs  typed_handle_behavior.rs  typed_handle_positive.rs  ui.rs
crates/core/tests/ui/: data_binding_arity_ceiling.rs  data_binding_arity_ceiling.stderr  data_binding_non_default_rule.rs  data_binding_non_default_rule.stderr  data_binding_wrong_arity_too_few.rs  data_binding_wrong_arity_too_few.stderr  data_binding_wrong_arity_too_many.rs  data_binding_wrong_arity_too_many.stderr  data_binding_wrong_type.rs  data_binding_wrong_type.stderr  flow_finish_consumes_builder.rs  flow_finish_consumes_builder.stderr  flow_pipeline_immutable.rs  flow_pipeline_immutable.stderr  ordering_edge_back_edge.rs  ordering_edge_back_edge.stderr  ordering_edge_self_cycle.rs  ordering_edge_self_cycle.stderr  registry_non_send_resource.rs  registry_non_send_resource.stderr  secret_no_debug.rs  secret_no_debug.stderr  secret_no_display.rs  secret_no_display.stderr  task_mut_self_through_shared_ref.rs  task_mut_self_through_shared_ref.stderr  task_non_send_capture.rs  task_non_send_capture.stderr  task_output_missing_static.rs  task_output_missing_static.stderr  task_output_missing_sync.rs  task_output_missing_sync.stderr  teardown_no_data_dependency.rs  teardown_no_data_dependency.stderr  typed_handle_data_cycle.rs  typed_handle_data_cycle.stderr  typed_handle_non_default_rule_on_data_node.rs  typed_handle_non_default_rule_on_data_node.stderr  typed_handle_unforgeable.rs  typed_handle_unforgeable.stderr  (+20 more)
crates/render/: Cargo.toml
crates/render/src/: dot.rs  lib.rs  main.rs  mermaid.rs  model.rs  overlay.rs
crates/render/tests/: fixture_schema_valid.rs  overlay.rs  reference_tools.rs  renderer.rs
crates/render/tests/fixtures/: schema-invalid.graph.json  stable-names.graph.json  thirty-node.golden.dot  thirty-node.golden.mmd  thirty-node.graph.json  thirty-node.overlay.golden.dot  thirty-node.overlay.golden.mmd
docs/: arch.md  coverage-matrix.md  criteria-matrix.md  lint-policy.md  tasks.md
docs/adr/: 0001-critical-path-definition.md
docs/conventions/: metric-naming.md
docs/implementation/: 001-T0.0a-repo-init-and-hygiene.md  002-T0.0b-contributor-and-branch-workflow.md  003-T1-crate-layout-and-workspace-skeleton.md  004-T2-async-runtime-adr.md  005-T0.10-stability-policy-and-criteria-partition.md  006-T7-ci-pipeline-and-criteria-matrix.md  007-T8-compile-failure-test-harness.md  008-T0.2-output-ownership-adr-spike.md  009-T0.3-timeout-and-permit-accounting-spike.md  010-T0.4-trigger-rule-and-state-tables.md  011-T0.5-bootstrap-phase-and-cost-model.md  012-T0.6-run-store-contract-adr.md  013-T0.7-stable-name-and-fingerprint-adr.md  014-T0.8-durable-output-contract.md  015-T0.9-ordering-edge-mechanics.md  016-T3-error-taxonomy-adr.md  (+66 more)
scripts/: check-artifact-serialization-format-adr.sh  check-async-runtime-adr.sh  check-bootstrap-phase-and-cost-model-adr.sh  check-contributor-workflow.sh  check-coverage-matrix.sh  check-coverage-verifier-selftest.sh  check-durable-output-contract-adr.sh  check-error-taxonomy-adr.sh  check-hygiene.sh  check-ordering-edge-mechanics-adr.sh  check-output-ownership-adr.sh  check-run-store-contract-adr.sh  check-stability-and-criteria.sh  check-stable-name-and-fingerprint-adr.sh  check-timeout-and-permit-adr.sh  check-trigger-rule-and-state-tables-adr.sh  check-typed-handle-encoding-adr.sh  check-workspace-skeleton.sh
(+25 files in other folders)
