# dagr-cli — the pipeline binary and its command-line contract.
#
# Role (per the T1 ADR): hosts the standard verbs every pipeline binary shares
# (graph, validate, render, run, single-node, resume, fold, prune — arch.md
# C26) and the typed-parameter plumbing around them. This is the one crate where
# the live pipeline (core), the artifacts (artifact), and rendering (render)
# meet: `render` here is invoked as the pipeline binary's `render` *subcommand*,
# which still consumes artifacts only, so it does not weaken C24.
#
# Dependency direction: cli may depend on core, artifact, and render. Nothing
# depends on cli. The CLI verb logic lands in later tickets (T55, T56); this
# crate is a placeholder lib plus a placeholder bin only.
[package]
name = "dagr-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "dagr_cli"
path = "src/lib.rs"

[[bin]]
name = "dagr"
path = "src/main.rs"

# --- Schema-validation forward (T39/T40), OFF by default ---------------------
# The graph-artifact round-trip test (`tests/graph_artifact_schema_roundtrip.rs`)
# validates a REAL emitted artifact against the published
# `schemas/graph/v1.schema.json` via the T39 helper (`dagr_artifact::schema`).
# That helper — and its CI-/dev-scoped `jsonschema` dependency (T4 ADR 017 §4) —
# sit behind dagr-artifact's `schema-validation` feature (default OFF). This cli
# feature FORWARDS to it, so the validator is pulled ONLY when a caller (CI's
# dedicated step, mirroring T39's) turns it on; the shipped binary and the bare
# `cargo test --workspace` never activate it, which keeps `cargo deny` from seeing
# `jsonschema`'s permissive-but-unlisted transitive licences (no deny.toml change).
[features]
schema-validation = ["dagr-artifact/schema-validation"]

[dependencies]
dagr-core = { path = "../core" }
dagr-artifact = { path = "../artifact" }
dagr-render = { path = "../render" }

# clap — the C26 command-line contract's argument parser (T55). The pipeline
# declares a typed parameter surface and the library *derives* the verb/flag
# parsing (arch.md C26: "the library derives the parsing"); clap's derive is the
# idiomatic expression of that seam, and it owns the reserved library-flag
# namespace so a pipeline parameter can never shadow a library-owned flag. It is
# added to dagr-cli — the pipeline binary that owns the CLI contract — NOT
# dagr-core, so core stays dependency-free (Stability / the T1 ADR). The feature
# set is kept minimal: `std` + `derive` + `help` + `usage` + `error-context`.
# `color`, `suggestions` (strsim), `wrap_help` (terminal_size), `env`, and
# `unicode` are DELIBERATELY OFF so `--help`/usage output is deterministic — no
# terminal-width- or TTY-dependent formatting, a C26/Determinism requirement —
# and the transitive tree stays small. The whole transitive addition (clap,
# clap_builder, clap_lex, clap_derive, anstyle, anstyle-parse, anstyle-query,
# anstream, colorchoice, is_terminal_polyfill, once_cell_polyfill, utf8parse,
# heck; proc-macro2/quote/syn/unicode-ident were already present via
# serde_derive) resolves to MIT under the MIT-only deny.toml — the sole non-MIT
# id, unicode-ident's `Unicode-3.0`, is ALREADY allowed (added by T19). NO
# deny.toml change is needed; `cargo deny`/`cargo audit` stay green.
clap = { version = "4", default-features = false, features = [
    "std",
    "derive",
    "help",
    "usage",
    "error-context",
] }

# serde_json — the T4-sanctioned (017) runtime serialization stack. The C20
# graph-artifact emitter (T40, `src/graph.rs`) builds the artifact as a
# `serde_json::Value` and serializes it through dagr-artifact's shared T4 §6
# canonicalizer (`dagr_artifact::canonical`). serde_json is the ADR's named
# runtime writer ("The runtime writers depend only on `serde` + `serde_json`");
# it is MIT, already resolved in the tree via dagr-artifact, and adds no new
# advisory/license surface. It moves from a dev-dependency to a direct dependency
# because the emitter is production code, not a test. The `jsonschema` validator
# stays CI-/dev-scoped (behind dagr-artifact's `schema-validation` feature),
# enabled only by the round-trip tests — the emitter itself never pulls it.
serde_json = "1"

# tokio — the async runtime the T2 ADR (004) commits to. The M1 run-loop driver
# (T24) needs exactly two capabilities beyond bare futures, so the feature set is
# kept minimal (NOT `full`, per the ticket's supply-chain constraint):
#   * rt-multi-thread — the driver builds TWO multi-threaded runtimes: an isolated
#     `framework` runtime (the loop, per-attempt timers, event writer — T2's
#     isolated framework runtime) and a separate `tasks` runtime attempts spawn
#     onto, so a task jamming every task worker cannot stall the framework runtime
#     (the all-workers-blocked scenario). `rt` is implied by `rt-multi-thread`.
#   * time — the per-attempt timeout deadline future and the bounded zombie grace
#     wait at natural run end (C16) are `tokio::time` sleeps armed on the isolated
#     runtime, so they fire even when task workers are saturated.
#   * sync — the framework loop receives each finished attempt's terminal state
#     and buffered event records over a `tokio::sync::mpsc` channel (the hand-off
#     from a spawned attempt back to the single-owner event writer), and awaits it
#     without blocking the framework runtime.
# `signal` is added by T36 (046): the C16 OS-signal handlers wiring SIGTERM/SIGINT
# to the T35 `CancelHandle` seam use `tokio::signal::unix::{signal, SignalKind}`,
# which reuses the runtimes and channels already built rather than adding a new
# crate like `ctrlc`/`signal-hook`. On unix, tokio's `signal` feature transitively
# pulls `mio` (for the async signal-driver notify pipe) and `signal-hook-registry`
# (the safe async-signal-safe handler registry) plus `libc` — all MIT OR Apache-2.0
# (resolved to MIT; no deny.toml change needed). `macros`, `net`, `fs`, and
# `process` remain omitted: the driver builds its runtimes by hand (no
# `#[tokio::main]`) and does no I/O of its own (the sink is injected — T0.6).
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "time", "sync", "signal"] }

# rayon — the dedicated compute pool the T2 ADR (004 §3) chose over a capped
# semaphore over `spawn_blocking`: a `rayon::ThreadPool` built with `num_threads(N)`
# runs at most N closures concurrently regardless of how many are submitted, so
# C13's "concurrently executing compute-class tasks never exceed the compute pool's
# size" is *structural in the pool* rather than resting on a correctly-held
# semaphore, and the blocking pool stays free for genuinely I/O-waiting work.
# Execution-class DISPATCH (T33) is where the ADR said this dependency lands; it is
# added to dagr-cli (which owns the driver/dispatch), NOT dagr-core, so core stays
# pure (Stability / T1). The default features are the work-stealing thread pool
# this needs; rayon's tree (rayon-core, crossbeam-*, either) is MIT OR Apache-2.0.
rayon = "1"

# tracing + tracing-subscriber — the C25 logging/tracing integration (T45, 056).
# arch.md C25 makes tracing a *named public integration*, not the cfg-gated
# optional dep dagx used: every attempt runs beneath a span carrying run/node/
# attempt identity so any line — framework or third-party the task calls — is
# attributable without correlating timestamps, with a structured-by-default and a
# human-readable output mode switchable by an environment variable (no recompile).
# It is added to dagr-cli — the pipeline binary that owns bootstrap and the run
# loop where attempts execute — NOT dagr-core, so core stays dependency-free
# (Stability / the T1 ADR): core exposes only the dep-free `LogSpan` identity
# payload on the `RunContext`; the subscriber install and the span wiring live
# here (`src/logging.rs`) and the driver instruments each attempt future with the
# span. The C25 tracing layer is the developer/operator observability surface and
# is deliberately DISTINCT from the C19 durable event stream (the authoritative
# record): a tracing line is not an event-stream record and never replaces one.
#   * tracing — the facade the framework and third-party libraries emit through;
#     `Span`/`Instrument` carry the attempt identity across `.await` points.
#   * tracing-subscriber with default-features OFF and only `fmt` + `json` + `std`:
#     `fmt` gives the human-readable local-dev layer, `json` the structured
#     machine-queryable default (run/node/attempt as discrete fields). `env-filter`
#     is deliberately NOT enabled — the mode env var selects the *format*, a level
#     cap is set directly — which keeps `matchers`/`regex`/`nu-ansi-term`/`smallvec`
#     out of the tree. The whole transitive addition (tracing, tracing-core,
#     tracing-attributes, tracing-serde, sharded-slab, thread_local, once_cell,
#     pin-project-lite; serde/serde_json/memchr were already present) resolves to
#     MIT under the MIT-only deny.toml — NO deny.toml change is needed, and
#     `cargo audit`/`cargo deny` stay green.
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "json", "std"] }

[dev-dependencies]
# libc — T36 (046) only. The C16 signal test proves the *end-to-end* OS-signal
# path without killing the test-runner by `fork`ing a controlled child that
# `raise`s SIGTERM/SIGINT at ITSELF and asserting the child took the cancellation
# exit path. That needs raw `fork`/`raise`/`waitpid` and the `WIF*` macros, which
# only `libc` exposes; it is a dev-dependency (test-only), already in the tree via
# tokio's `signal` feature and rayon, and MIT OR Apache-2.0. The child harness is
# `#[cfg(unix)]`; on non-unix the end-to-end path is documented as a no-op and the
# wiring is covered through the programmatic seam + routing unit tests instead.
[target.'cfg(unix)'.dev-dependencies]
libc = "0.2"

[lints]
workspace = true
