# dagr-core — the execution core (the live pipeline surface).
#
# Role (per the T1 ADR): holds the authoring surface and execution core — the
# code that *is* the running pipeline. This is the crate whose dependency set
# arch.md "Stability" commits to keeping minimal and review-gated; it is empty
# here (a skeleton) and every future addition is an API decision.
#
# Dependency direction: core depends on nothing in the workspace. render must
# never gain a dependency edge onto core (C24). The domain types, task/handle
# APIs, assembly, and runtime land in later tickets (T9, T13, T14, T2, …); this
# crate is a placeholder lib only.
[package]
name = "dagr-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "dagr_core"
path = "src/lib.rs"

[dependencies]

[features]
# The C28 single-task test kit (ticket T60) — a shipped testing utility
# downstream test code calls to exercise ONE task in isolation with a hand-built
# RunContext (C8) and fake resources (C9). Enabled by default so the kit is part
# of the default `--workspace` test/clippy/doc surface (and its behavioral tests
# run under `cargo test --workspace`), but factored behind its own feature so a
# production build can `default-features = false` to exclude it. It adds NO
# dependency and NO production runtime behavior — it is inert constructor/driver
# code reachable only when test code calls it.
default = ["test-kit"]
test-kit = []

[lints]
workspace = true
